# ChangeLog for net-p2p/gift
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift/ChangeLog,v 1.55 2004/11/28 22:16:29 squinky86 Exp $

*gift-0.11.8.1 (28 Nov 2004)

  28 Nov 2004; Jon Hood <squinky86@gentoo.org> +gift-0.11.8.1.ebuild,
  -gift-0.11.8.ebuild:
  Version bump, remove non-working version.

*gift-0.11.8 (23 Nov 2004)

  23 Nov 2004; Jon Hood <squinky86@gentoo.org> gift-0.11.7-r1.ebuild,
  +gift-0.11.8.ebuild:
  Version bump, enable libmagic, #65367 Octavio Ruiz <tacvbo@tacvbo.net>.

*gift-0.11.7-r1 (23 Sep 2004)

  23 Sep 2004; Jon Hood <squinky86@gentoo.org> +gift-0.11.7-r1.ebuild,
  -gift-0.11.7.ebuild:
  Version bump irt #63790.

  22 Sep 2004; Jon Hood <squinky86@gentoo.org> gift-0.11.7.ebuild:
  See bug #63790- does not install required libraries correctly. KEYWORDS="-*"

*gift-0.11.7 (22 Aug 2004)

  22 Aug 2004; Jon Hood <squinky86@gentoo.org> +gift-0.11.7.ebuild:
  Version bump.

  21 Aug 2004; Jason Wever <weeve@gentoo.org> gift-0.11.6-r1.ebuild:
  Stable on sparc.

  30 Jul 2004; Jon Hood <squinky86@gentoo.org> gift-0.11.6-r1.ebuild:
  Stable on x86.

  27 Jul 2004; Guillaume Destuynder <kang@gentoo.org>
  gift-0.11.7_pre20040627.ebuild,
  gift-0.11.6-r1.ebuild:
  Fixes #58526, incorrect enewuser usage

  07 Jul 2004; Travis Tilley <lv@gentoo.org> gift-0.11.7_pre20040627.ebuild:
  marking stable on amd64 since it's the only version that really works right

*gift-0.11.7_pre20040627 (27 Jun 2004)

  27 Jun 2004; Jon Hood <squinky86@gentoo.org>
  +gift-0.11.7_pre20040627.ebuild:
  version bump for amd64 to fix #45549; thanks lv@gentoo.org for helping out
  with this one :)

*gift-0.11.6-r1 (26 Jun 2004)

  26 Jun 2004; Jon Hood <squinky86@gentoo.org> +files/gift.confd,
  +files/gift.initd, -gift-0.11.4.ebuild, -gift-0.11.5.ebuild,
  +gift-0.11.6-r1.ebuild:
  Adding init script with substantial changes to ebuild. Thanks to floam