@@ -1,13 +1,13 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift/Attic/gift-0.11.7-r1.ebuild,v 1.2 2004/11/23 20:32:36 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift/Attic/gift-0.11.7-r1.ebuild,v 1.3 2005/09/06 21:12:59 sekretarz Exp $
 
 inherit eutils libtool
 
 DESCRIPTION="A OpenFT, Gnutella and FastTrack p2p network daemon"
 HOMEPAGE="http://gift.sourceforge.net"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
-IUSE="imagemagick oggvorbis"
+IUSE="imagemagick vorbis"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -15,7 +15,7 @@ KEYWORDS="~x86 ~sparc ~ppc ~alpha ~amd64 ~ia64"
 
 RDEPEND=">=sys-libs/zlib-1.1.4
 	imagemagick? ( >=media-gfx/imagemagick-5.5.7.15 )
-	oggvorbis? ( >=media-libs/libvorbis-1 )"
+	vorbis? ( >=media-libs/libvorbis-1 )"
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
@@ -37,7 +37,7 @@ src_unpack() {
 
 src_compile() {
 	econf `use_enable imagemagick` \
-		`use_enable oggvorbis libvorbis` || die
+		`use_enable vorbis libvorbis` || die
 	emake || die
 }
 
